--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -61,7 +61,9 @@ jobs:
         with:
           urls: |
             https://opach.online
-          uploadArtifacts: true
+          # Disable artifact upload for pull_requests from forks to avoid Unauthorized errors.
+          # For normal push/workflow_dispatch runs this evaluates to true.
+          uploadArtifacts: ${{ (github.event_name != 'pull_request') || (github.event.pull_request.head.repo.full_name == github.repository) }}
           temporaryPublicStorage: true
           configPath: ""
           runs: 1
